@@ -25,23 +25,23 @@ HOSTS:
     platform:   el-7-x86_64
     box:        centos/7
     hypervisor: <%= hypervisor %>
-  left6:
-    roles:
-      - server
-      - left6
-      - agent
-      - libreswan
-    platform:   el-6-x86_64
-    box:        centos/6
-    hypervisor: <%= hypervisor %>
-  right6:
-    roles:
-      - server
-      - right6
-      - agent
-      - libreswan
-    platform:   el-6-x86_64
-    box:        centos/6
+  left6:        
+    roles:      
+      - server  
+      - left6   
+      - agent   
+      - libreswan       
+    platform:   el-6-x86_64     
+    box:        centos/6        
+    hypervisor: <%= hypervisor %>       
+  right6:       
+    roles:      
+      - server  
+      - right6  
+      - agent   
+      - libreswan       
+    platform:   el-6-x86_64     
+    box:        centos/6        
     hypervisor: <%= hypervisor %>
 CONFIG:
   log_level: verbose
