@@ -1,3 +1,8 @@
+* Tue Aug 20 2019 Jeckles <joeleckles@gmail.com> - 3.2.0-0
+- Added support for Opportunistic IPsec:
+  - Added Opportunistic Group Connections
+  - Added parameters necessary for Opportunistic IPsec
+
 * Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 3.2.0-0
 - Drop Puppet 4 support
 - Add Puppet 6 support
